--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <title>💚Ceres Fauna Personal Site💚</title>
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
-    <img src="images/Fauna my love-modified.png" alt="Ceres Fauna profile">
-
-    <h1> Hello! I'm Fauna </h1>
-    <p><em>Vtuber of <strong><a href="https://shop.hololivepro.com/en">The Hololive coperation.</a></strong> </em></p>
-    <p>I am a the keeper of nature.</p>
+    <table cellspacing ="20">
+        <tr>
+            <td>
+                <img src="images/Fauna my love-modified.png" alt="Ceres Fauna profile">
+            </td>
+            <td>
+                <h1> Hello! I'm Ceres Fauna </h1>
+                <p><em>Vtuber of <strong><a href="https://shop.hololivepro.com/en">The Hololive coperation.</a></strong> </em></p>
+                <p>I am a the keeper of nature.</p>
+            </td>
+        </tr>
+    </table>
     <hr>
 
     <h3>About me</h3>
